--- a/style.css
+++ b/style.css
@@ -19,7 +19,13 @@ h1 {text-align: center;}
     width: 50%;
 }
 
-
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 
 h3 {text-align: center;}
