--- a/style.css
+++ b/style.css
@@ -27,6 +27,15 @@ h1 {text-align: center;}
   margin-right: auto;
 }
 
+.lists {
+    text-align: center;
+    list-style-position: inside;
+}
+
+.sublists {
+    text-align: center;
+    list-style-position: inside;
+}
 
 h3 {text-align: center;}
 ul {text-align: center; list-style-position: inside; } 
